implement post method
